--- a/app/package.json
+++ b/app/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@dysonswap/tachyon",
-  "version": "0.5.0",
+  "version": "0.5.2-dyson",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
